@@ -96,10 +96,44 @@ struct sdio_dev_s; /* See include/nuttx/sdio.h */
 FAR struct sdio_dev_s *sdio_initialize(int slotno);
 
 /****************************************************************************
+ * Name: sam_hsmci_clkdiv
+ *
+ * Description:
+ *   Multimedia Card Interface clock (MCCK or MCI_CK) is Master Clock (MCK)
+ *   divided by (2*(CLKDIV) + CLOCKODD + 2).
+ *
+ *     CLKFULLDIV = 2*CLKDIV + CLOCKODD;
+ *     MCI_SPEED  = MCK / (CLKFULLDIV + 2)
+ *     CLKFULLDIV = MCK / MCI_SPEED - 2
+ *
+ *     CLKDIV     = CLKFULLDIV >> 1
+ *     CLOCKODD   = CLKFULLDIV & 1
+ *
+ *   Where CLKDIV has a range of 0-255.
+ *
+ *   NOTE: The primary use of this function is for cases where the clock
+ *   frequencies are not known a priori and so HSMCI clock dividers must
+ *   be determined dynamically.  This is the case, for example, when we
+ *   execute out of SDRAM.  In that case, the clocking was set up by the
+ *   bootloader that brought us into SDRAM and it is that bootloader that
+ *   has configured the clocking.
+ *
+ * Input parameters:
+ *   target - The target SD frequency
+ *
+ * Returned Value:
+ *   A bitset containing the CLKDIV and CLKODD bits as needed to configure
+ *   the HSMCI clock output.
+ *
+ ****************************************************************************/
+
+uint32_t sam_hsmci_clkdiv(uint32_t target);
+
+/****************************************************************************
  * Name: sdio_mediachange
  *
  * Description:
- *   Called by board-specific logic -- posssible from an interrupt handler --
+ *   Called by board-specific logic -- possibly from an interrupt handler --
  *   in order to signal to the driver that a card has been inserted or
  *   removed from the slot
  *
