@@ -286,57 +286,3 @@ uint32_t sam_mck_frequency(uint32_t mainclk)
 
   return mck / mdiv;
 }
-
-/************************************************************************************
- * Name: sam_hsmci_clkdiv
- *
- * Description:
- *   Multimedia Card Interface clock (MCCK or MCI_CK) is Master Clock (MCK)
- *   divided by (2*(CLKDIV) + CLOCKODD + 2).
- *
- *     CLKFULLDIV = 2*CLKDIV + CLOCKODD;
- *     MCI_SPEED  = MCK / (CLKFULLDIV + 2)
- *     CLKFULLDIV = MCK / MCI_SPEED - 2
- *
- *     CLKDIV     = CLKFULLDIV >> 1
- *     CLOCKODD   = CLKFULLDIV & 1
- *
- *   Where CLKDIV has a range of 0-255.
- *
- * TODO: This belongs elsewhere
- *
- ************************************************************************************/
-
-#ifdef CONFIG_ARCH_HAVE_SDIO
-uint32_t sam_hsmci_clkdiv(uint32_t target)
-{
-  uint32_t clkfulldiv;
-  uint32_t ret;
-
-  /* Get the largest divisor does not exceed the target value */
-
-  clkfulldiv = (BOARD_MCK_FREQUENCY + target - 1) / target;
-
-  if (clkfulldiv > 2)
-    {
-     clkfulldiv -= 2;
-    }
-  else
-    {
-     clkfulldiv = 0;
-    }
-
-  if (clkfulldiv > 511)
-    {
-      clkfulldiv = 511;
-    }
-
-  ret = (clkfulldiv >> 1) << HSMCI_MR_CLKDIV_SHIFT;
-  if ((clkfulldiv & 1) != 0)
-    {
-      ret |= HSMCI_MR_CLKODD;
-    }
-
-  return ret;
-}
-#endif
