@@ -7079,3 +7079,7 @@
 	* configs/nuttx/compiler.h:  Add macro UNUSED() that can be used
 	  to eliminate warnings about variables that are set to values
 	  that are not used (2014-3-30).
+	* arch/arm/src/sama5/sam_hsmci_clkciv.c:  Remove HSCMI-related
+	  functions that did not belong in sam_pmc.c and give them their
+	  own file (2014-3-30).
+
